# Silly-Bird-Sidequest

./: .clang-format  .gitignore  .gitmodules  AnimatedSprite.hpp  AnimatedSpriteOverlay.hpp  Animation.hpp  CMakeLists.txt  CollisionRect.hpp  CollisionResult.hpp  Curve.hpp  DiveParticle.hpp  FColor.hpp  Game.hpp  GameState.hpp  IDrawable.hpp  IDrawableRect.hpp  IParticle.hpp  IProcessable.hpp  InputManager.hpp  Jizz.hpp  LICENSE.md  Level.hpp  Math.hpp  MovementStateDash.hpp  MovementStateDead.hpp  MovementStateDive.hpp  MovementStateDuck.hpp  MovementStateLedge.hpp  MovementStateManager.hpp  MovementStateNormal.hpp  MovementStateSlide.hpp  MovementStateWallrun.hpp  ParticleSpawner.hpp  Player.hpp  PlayerFactory.hpp  README.md  Random.hpp  Raycast.hpp  RenderChunk.hpp  Room.hpp  (+13 more)
android-project/app/: build.gradle
android-project/app/src/main/: AndroidManifest.xml
code/engine/: Curve.hpp  Game.hpp  GameState.hpp  Math.hpp  PlatformDefines.hpp  Random.hpp  ResourceManager.hpp  Vector2.hpp  main.cpp
code/engine/devconsole/: DevConsole.hpp  DevConsoleCommand.hpp  DevConsoleCommandManager.hpp  DevConsoleCommandRegister.hpp  DevConsoleInput.hpp  DevConsoleMessage.hpp  DevConsoleNewline.hpp  DevConsoleOutputStream.hpp
code/engine/devconsole/commands/: ConsoleCommandsMisc.hpp  ConsoleCommandsMod.hpp  ConsoleCommandsPlayer.hpp
code/engine/graphics/: AnimatedSprite.hpp  AnimatedSpriteOverlay.hpp  Animation.hpp  FColor.hpp  IDrawable.hpp  IDrawableRect.hpp  IParticle.hpp  ParticleSpawner.hpp  PlaybackPosition.hpp  RenderChunk.hpp
code/engine/input/: Action.hpp  InputManager.hpp  UIAction.hpp  UIActionEvent.hpp  UIInputManager.hpp
code/engine/input/touch/: TouchButton.hpp  TouchController.hpp
code/engine/mods/: LevelMod.hpp  Mod.hpp  ModLevelInfo.hpp  ModManager.hpp  ResourceMod.hpp  SkinMod.hpp  SubmodInfo.hpp
code/engine/physics/: CollisionRect.hpp  CollisionResult.hpp  Raycast.hpp
code/engine/save/: ISaveManager.hpp  ISaveManagerGeneric.hpp  ISaveManagerPC.hpp  SaveData.hpp  SaveManager.hpp  SaveManagerAndroid.hpp  SaveManagerBase.hpp  SaveManagerGeneric.hpp  SaveManagerPC.hpp  SaveManagerPSP.hpp
code/engine/ui/: DevConsoleMenu.hpp  DirectoryListMenu.hpp  DirectorySelectButton.hpp  IDevConsoleMenu.hpp  Menu.hpp  MenuTransparentBG.hpp  TestMenu.hpp  UIManager.hpp
code/engine/world/: ForegroundTile.hpp  IRoomObject.hpp  Level.hpp  PlayerDetector.hpp  Room.hpp  RoomCamera.hpp  RoomChunk.hpp  RoomNeighbor.hpp  Spike.hpp  SpikeTile.hpp  Tile.hpp  TileBase.hpp  WorldManager.hpp
code/fonts/: drafting_mono_12.c  drafting_mono_14.c  drafting_mono_28.c
code/game/physics/: SpikeCollider.hpp
code/game/player/: IPlayer.hpp  Player.hpp
code/game/player/graphics/: DiveParticle.hpp  Jizz.hpp  Scarf.hpp
code/game/player/movement/: IMovementState.hpp  MovementStateDash.hpp  MovementStateDead.hpp  MovementStateDive.hpp  MovementStateDuck.hpp  MovementStateLedge.hpp  MovementStateManager.hpp  MovementStateNormal.hpp  MovementStateSlide.hpp  MovementStateWallrun.hpp
code/game/ui/: Menus.hpp  PauseMenu.hpp  Styles.hpp  TitleScreen.hpp
code/game/ui/gameplay/: PauseMenu.hpp
code/game/ui/save/: ListLoadMenu.hpp  ListSaveMenu.hpp
code/game/ui/title/: ModSelectButton.hpp  ModSelectMenu.hpp  TitleScreenMenu.hpp
code/game/world/objects/: RoomObjectFactory.hpp  UpgradePickup.hpp
content/shaders/jizz/: fragment.glsl  vertex.glsl
content/sidequest/skins/classic/: skin.json
content/title-screen-bg/: level.json
content/title-screen-bg/rooms/0/: 0.chunk  room.json
include-files/content/curves/particles/: dive_scale.curve
include-files/content/sidequest/: mod.json
include-files/content/sidequest-hidden/: mod.json
include-files/mods/level-design-sketches/: level.json
mods/checkpoint-test/: level.json
mods/checkpoint-test/rooms/0/: room.json  spikes.ow
mods/checkpoint-test/rooms/1/: 0.chunk  room.json  spikes.ow
mods/ledge-grab-crouch-test/: level.json
mods/ledge-grab-crouch-test/rooms/0/: 0.chunk
mods/level-design-sketches/rooms/0/: room.json
mods/spike-test/: level.json
mods/spike-test/rooms/0/: 0.chunk  0.spikes  2.chunk  2.spikes  3.spikes  room.json  spikes.ow
mods/spike-test/rooms/1/: 0.chunk  2.chunk  room.json  spikes.ow
mods/test-sbmaker-project/: level.json
mods/test-sbmaker-project/rooms/: 0.json  1.json  2.json  3.json  4.json
mods/test-sbmaker-project/rooms/0/: 0.chunk  1.chunk  3.chunk  room.json
mods/test-sbmaker-project/rooms/1/: 0.chunk  1.chunk  2.chunk  3.chunk  room.json
mods/test-sbmaker-project/rooms/2/: 0.chunk  1.chunk  2.chunk  3.chunk  room.json
mods/test-sbmaker-project/rooms/3/: 0.chunk  1.chunk  2.chunk  3.chunk  4.chunk  5.chunk  6.chunk  7.chunk  8.chunk  room.json
mods/test-sbmaker-project/rooms/4/: 0.chunk  1.chunk  10.chunk  11.chunk  12.chunk  13.chunk  14.chunk  15.chunk  16.chunk  17.chunk  18.chunk  19.chunk  2.chunk  20.chunk  21.chunk  22.chunk  23.chunk  24.chunk  3.chunk  4.chunk  5.chunk  6.chunk  7.chunk  8.chunk  9.chunk  room.json
mods/test-sbmaker-project/rooms/5/: 0.chunk  1.chunk  10.chunk  11.chunk  12.chunk  13.chunk  14.chunk  15.chunk  16.chunk  17.chunk  18.chunk  19.chunk  2.chunk  20.chunk  21.chunk  22.chunk  23.chunk  24.chunk  (+64 more)
mods/test-sbmaker-projectrooms/1/: 1.chunk  2.chunk  3.chunk
mods/test-sbmaker-projectrooms/2/: 1.chunk  2.chunk  3.chunk
mods/test-sbmaker-projectrooms/3/: 2.chunk  3.chunk  4.chunk  7.chunk  8.chunk
mods/test-sbmaker-projectrooms/4/: 11.chunk  12.chunk  15.chunk  16.chunk  17.chunk  19.chunk  2.chunk  20.chunk  21.chunk  23.chunk  3.chunk  4.chunk  8.chunk  9.chunk
mods/test-sbmaker-projectrooms/5/: 0.chunk  1.chunk  11.chunk  12.chunk  13.chunk  15.chunk  16.chunk  17.chunk  18.chunk  2.chunk  24.chunk  25.chunk  26.chunk  27.chunk  28.chunk  3.chunk  31.chunk  32.chunk  36.chunk  37.chunk  38.chunk  39.chunk  4.chunk  40.chunk  41.chunk  44.chunk  46.chunk  48.chunk  49.chunk  5.chunk  50.chunk  51.chunk  52.chunk  54.chunk  57.chunk  6.chunk  63.chunk  66.chunk  7.chunk  71.chunk  (+5 more)
mods/upgrade-test/: level.json
mods/wallrun-test/: level.json
(+391 files in other folders)
